# launchpad

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.py
docs/: PUBLICATION_CHECKLIST.md  README.md  SCHEMA.md  greenfield.md  kit-evolution.md  local-dev.md  multi-forge.md  multi-laptop.md  new-client.md  onboarding-wizard.md  prayog-profiles-meta-pm.yaml  rules-repo-rendering-spec.md  scaffolding.md  setup-guide.md  stacks.md
examples/: agent-prompt-templates.md  clients.yaml.example  onboarding-kola-gitlab.yaml  onboarding-kola.yaml  programme-kola.yaml
launchpad/: __init__.py  __main__.py  bootstrap_org.py  bootstrap_teams.py  cli.py  clients.py  config.py  doctor.py  factory_verify.py  forge.py  gitflow.py  gitflow_policy.py  github_client.py  github_ops.py  harness.py  issue_types.py  paths.py  platform.py  platform_repos.py  prayog_profile.py  project.py  repo_seed.py  seed_work.py  service_catalog.py  ui.py  wiki.py  workspace_clone.py
playbook/: README.md  agent-prompt-templates.md  bootstrap-prerequisites.md  branching-policy.md  cursor-github-connection.md  delivery-model.md  delivery-workflow.md  exit-criteria.md  github-enforcement.md  github-org-setup.md  github-project.md  gitlab-board.md  greenfield-app-repo.md  harness-pins.md  pm-dev-handoff.md  pm-workflow.md  python-automation.md  sdd-workflow.md  skills-audition.md  skills-matrix.md  spec-layout.md  teams-and-rbac.md  test-quality-program.md  wiki-index.md  wiki-setup.md
scripts/: smoke-local.sh
tasks/: plan.md  todo.md
templates/: AGENTS.data-platform.md  AGENTS.md  (+16 more)
(+232 files in other folders)
