[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "launchpad"
version = "0.4.8"
description = "Repeatable engineering kit — forge factory, playbook, tenant scaffolding"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
  "cookiecutter>=2.6.0",
  "httpx>=0.27.0",
  "PyYAML>=6.0.1",
  "python-dotenv>=1.0.0",
]

[project.scripts]
launchpad = "launchpad.cli:main"

[project.urls]
Homepage = "https://github.com/drivestream-lab/launchpad"
Repository = "https://github.com/drivestream-lab/launchpad"
Skills = "https://github.com/drivestream-lab/prayog-skills"

[tool.setuptools.packages.find]
where = ["."]
include = ["launchpad*"]

[tool.setuptools.package-data]
launchpad = ["py.typed"]
